calico/network-policy-namespace-a.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-a
  namespace: namespace-a
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: namespace-b
    ports:
      - protocol: TCP
        port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: namespace-c
    ports:
      - protocol: TCP
        port: 5432
